--- a/java8/tasks/main.yml
+++ b/java8/tasks/main.yml
@@ -1,42 +1,10 @@
-- name: Create Directory structure
-  file: state=directory path={{ download_folder }}
-  file: state=directory path={{ java_name }}
+- name: Install JDK8 on centos
+  include_tasks: centos.yml
+  when: ansible_distribution == "CentOS"
 
-- name: Download Java
-  command: "wget -q -O {{ java_archive }} --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{ jdk_tarball_url }} creates={{java_archive}}"
+- name: Install JDK8 on Windows
+  include_tasks: windows.yml
+  when: ansible_os_family == "Windows"
 
-- name: Untar JDK
-  command: "tar -zvxf {{ java_archive }} -C {{ download_folder }} creates={{java_name}}"
 
-- name: Set systemwide oracle env file under /etc/profile.d/
-  set_fact: remote_file_path={{profile_path}}/oracle_jdk.sh
 
-- name: Fix ownership
-  file: state=directory path={{java_name}} owner=root group=root recurse=yes
-
-- name: Make Java available for system
-  command: 'alternatives --install "/usr/bin/java" "java" "{{java_name}}/bin/java" 2000'
-  command: alternatives --install /usr/bin/jar jar {{ java_name }}/bin/jar 2
-  command: alternatives --install /usr/bin/javac javac {{ java_name }}/bin/javac 2
-  command: alternatives --set jar {{ java_name }}/bin/jar
-  command: alternatives --set javac {{ java_name }}/bin/javac
-
-- name: Create a new file {{profile_path}}/oracle_jdk.sh
-  file: path={{remote_file_path}} state=touch
-
-- stat: path={{remote_file_path}}
-  register: file_path
-
-- copy:
-     content: |
-               #!/bin/bash
-               export JDK_HOME={{ java_name }}
-               export JAVA_HOME={{ java_name }}
-               export JRE_HOME={{ java_name }}/jre
-               export PATH=$PATH:{{ java_name }}/bin:{{ java_name }}/jre/bin
-     dest: /etc/profile.d/oracle_jdk.sh
-
-- name: Source the file {{profile_path}}/oracle_jdk.sh
-  action: shell source /etc/profile
-- name: Clean up
-  file: state=absent path={{java_archive}}
